# affective-fnirs

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
configs/: README.md  fnirs_channel_locations.csv  montage_config.json  pilot_finger_tapping.cfg  pipeline_example.yml  sub-009.yml  sub-010.yml  sub002_optimized.yml  sub003_optimized.yml  sub004_optimized.yml  sub005_optimized.yml  validation_pipeline.yml
docs/: C3_C4_ERD_EXPLANATION.md  CHANGELOG.md  CHECKPOINT_10_RESULTS.md  CHECKPOINT_4_RESULTS.md  CHECKPOINT_7_RESULTS.md  DUDAS_PROYECTO.md  INSTALLATION_STEPS.md  SUB002_QA_DIAGNOSIS.md  TASK_11_SUMMARY.md  TASK_6.8_SUMMARY.md  TEST_DATA.md  snirf_structure.txt
pytest_tests/: CHECKPOINT_9_VERIFICATION.md  README.md  test_config.py  test_run_analysis_cli.py  test_unified_config.py
scripts/: check_data_completeness_simple.py  check_eeg_channels.py  check_eeg_channels_detail.py  check_eeg_quality_detail.py  check_eeg_reference.py  check_eeg_units.py  check_event_coverage.py  check_sub001_streams.py  check_sub002_timing.py  check_sub010_events.py  compare_subjects_timing.py  debug_channels.py  debug_eeg_amplitude.py  debug_eeg_channel_quality_detail.py  debug_eeg_channels.py  debug_eeg_clusters.py  debug_eeg_stream_info.py  debug_eeg_units.py  debug_epoch_creation.py  debug_erd_issues.py  debug_erd_issues_v2.py  debug_fnirs_channels.py  debug_pipeline_scaling.py  debug_short_channels.py  debug_short_channels2.py  debug_short_channels3.py  debug_short_channels4.py  debug_stream_info.py  debug_sub003_epochs.py  debug_sub004.py  (+44 more)
(+58 files in other folders)
