[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "affective-fnirs"
version = "0.1.0"
description = "Análisis de datos fNIRS para neurociencia cognitiva y afectiva"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sebastian et al."}
]
keywords = ["fNIRS", "neuroimaging", "cognitive neuroscience", "affective neuroscience"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    
    # Neuroimaging
    "mne",
    "mne-nirs",
    
    # fNIRS avanzado (cedalion incluye snirf)
    "cedalion",
    "xarray",
    "pint",
    "pyvista",
    
    # Multimodal
    "pyxdf",
    "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/yourusername/affective-fnirs"
Repository = "https://github.com/yourusername/affective-fnirs"

[tool.setuptools.packages.find]
where = ["src"]
